--- a/Devendra_parihar_lab1.ipynb
+++ b/Devendra_parihar_lab1.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Devendra_parihar_lab1.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMTnX78xWKlCmHSbgVzgtv/",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Dev523d/rainfall-in-india-visualization/blob/main/Devendra_parihar_lab1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
